--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@wagmi/chains": "^1.8.0",
     "@wagmi/core": "^1.4.12",
     "ethers": "^6.9.0",
     "react": "^18.2.0",
