--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@wagmi/core": "^1.4.12",
     "ethers": "^6.9.0",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
