--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-code-blocks": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-tabs": "^6.0.2",
     "typescript": "^4.9.5",
     "viem": "^1.20.1",
     "wagmi": "^1.4.12",
